--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,6 @@ site_name: My Docs
 site_url: https://leobl-1.github.io/Test-action
 theme:
   name: material
+  icon:
+    repo_url: https://github.com/LeoBl-1/Test_action
+    repo: fontawesome/brands/git-alt
